fixing css contrast issues

--- a/week02/styles/media-query.css
+++ b/week02/styles/media-query.css
@@ -10,7 +10,7 @@ footer {
   margin: 1rem auto;
   border: rgba(0, 0, 0, 0.275) solid 1px;
   padding: 10px;
-  background-color: rgb(118, 118, 243);
+  background-color: rgb(181, 181, 255);
 }
 main {
   display: grid;
